# cache-simulator

./: CMakeLists.txt  Cache.cpp  Cache.h  Makefile  cache.cpp  cache.h  cache_line.h  cache_sim  cache_simulator.cpp  cache_simulator.h  memref.h  test.c  test2.cpp  test_cache_sim  tracer-test.cpp  tracer.cpp
common/: memref.h
simulator/: CMakeLists.txt  cache.cpp  cache.h  cache_config.h  cache_line.h  cache_simulator.cpp  cache_simulator.h  lru.cpp  main.cpp  replacement_policy.h  reuse_dist.h
test/: CMakeLists.txt  burst_malloc.cpp  burst_threads.cpp  shared_threads.cpp
tracer/: CMakeLists.txt  cmake_install.cmake  test.txt  test2.c  tracer-multicore.cpp  tracer-test.cpp  tracer-test2.cpp  tracer.cpp
