cmake_minimum_required(VERSION 3.12)
SET(DynamoRIO_DIR "/home/toby/dynamoRIO/cmake")
add_library(myclient SHARED tracer-test.cpp ../common/memref.h)
find_package(DynamoRIO)
if(NOT DynamoRIO_FOUND)
	message(FATAL_ERROR "DynamoRIO package required to build")
endif(NOT DynamoRIO_FOUND)
configure_DynamoRIO_client(myclient)
use_DynamoRIO_extension(myclient drutil)
use_DynamoRIO_extension(myclient drreg)
use_DynamoRIO_extension(myclient drmgr)
